<resources>
    <string name="app_name">testSktl</string>
    <string name="username_Text">Привет, дорогой </string>
    <string name="password_Text">(а я знаю твой пароль: </string>
    <string name="Text_one">long long</string>
    <string name="Text_two">merce</string>
    <string name="chenger_Button">CHANGE!</string>  <!--hw1-->
    <string name="classwork2_username">Name</string>  <!--cw2-->
    <string name="classwork2_login">Login</string>  <!--cw2-->
    <string name="link_image">https://goo.gl/oaZVyX</string>  <!--hw3-->
    <string name="link_image1">https://goo.gl/oaZVyX</string>
    <string name="title_activity_maps">Map</string>  <!--hw6-->

</resources>
