<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/username_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_Text" />

    <TextView
        android:id="@+id/password_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_Text" />

    <Button
        android:id="@+id/hello_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello" />

    <TextView
        android:id="@+id/first_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text_one" />

    <TextView
        android:id="@+id/second_textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Text_two" />

    <Button
        android:id="@+id/chenge_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chenger_Button" />
</LinearLayout>